[package]
name = "blow_up_monkey_calc"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.18.0"
gif = "0.13.1"
image = "0.25.2"
ocrs = "0.9.0"
rsautogui = "0.2.2"
rten = "0.13.1"
rten-imageproc = "0.13.1"
rten-tensor = "0.13.1"
winapi = { version = "0.3.9", features = [ "winuser", "wingdi" ] }
